Before 14 February (Unrecorded date)
- *Backend*: 
	- wrote a custom markdown plugin for the kramdown markdown parser to process received markdown documents into html.
	- TODO: Defined a structure for the markdown and yaml document for content management. Until this structure is done, the server is hosting the content statically.
- *Frontend*: 
	- Complete the basic css styling of the home page and content page.
	- TODO: Finished dynmaic rendering on frontend.

14 February 
- *Frontend*: 
	-	Finished dynamic rendering pages from url hash change.
	- Finished rendering different structures of pages.
	- TODO: css styling of the inner pages.
	- TODO: Dynamic page rendering further debug.

15 February
- *Backend*:
  - Added parsing for audio and video
	- Fiinished connecting up the backend and frontend.
	- TODO: Parsing for container contents in markdown (choice view and recipe view)

17 February
- *Frontend*:
  - Finished most of the structural css styling.
	- Improved Node wandering functions by adding a NodeHistory object.
	- TODO: pre-download media of one page ahead to minimize latancy of image loading between nodes.
	- TODO: More css styling after getting comments from Cristina.
- *Backend*:
  - Completed all custom markdown parsing: gallery tag, section tag, video tag, audio tag and side-by-side sections (left tag and right tag).
	- Added a route to dynamically grab media from server.

20 February
- *Backend*:
  - FIXED BUG: Wrong return value of the get route that causes sinatra to interpret it as a rack respond, yielding an error to process it.