@@ -2,20 +2,22 @@ import * as Render from "./renderer.js";
 import { NavigationBar } from "./navigationBar.js";
 import { NodeWalker } from "./nodeWalker.js";
 import { ENTRY_NODE_ID } from "./constants.js";
+import { browserSupportsPassiveEvent, MediaPreloader } from "./helpers.js";
 
 function main(event) {
   let ref = {
     body: document.getElementsByTagName("body")[0],
     nav:  document.getElementsByTagName("nav")[0],
     main: document.getElementsByTagName("main")[0],
-    lessonContent: document.getElementById("lesson-content"),
     nextLessonButton: document.getElementById("next-lesson-btn"),
     lessonList: new NavigationBar(document.getElementById("lesson-list")),
-    nodeWalker: NodeWalker.fromTemplateTag(ENTRY_NODE_ID)
+    nodeWalker: NodeWalker.fromTemplateTag(ENTRY_NODE_ID),
+    mediaPreloader: new MediaPreloader()
   }
-  let page = window.location.hash.slice(1);
-  if (!page) window.location.hash = `#${ENTRY_NODE_ID}`;
-  Render.run(page, ref);
+  let pageId = window.location.hash.slice(1);
+  if (!pageId) pageId = ENTRY_NODE_ID;
+  console.log(pageId);
+  Render.run(pageId, ref);
   window.addEventListener("hashchange", (event) => {
     let newId = window.location.hash.slice(1);
     Render.run(newId, ref);
@@ -24,7 +26,7 @@ function main(event) {
     if (ref.body.classList.contains("choice-view")) {
       ref.main.scrollLeft += event.deltaY;
     }
-  });
+  }, browserSupportsPassiveEvent ? {passive: true} : false);
   Render.startButton("start-btn", ref);
   Render.iconButton("website-title", ref);
   Render.nextLessonButton("next-lesson-btn", ref);
